--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opensso-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "open sso client",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -51,6 +51,9 @@
     "node": ">=8.9"
   },
   "dependencies": {
+    "@types/qs": "^6.5.1",
+    "axios": "^0.18.0",
+    "qs": "^6.6.0",
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
